Update cb's references

--- a/docs/biblio/ccgo.bib
+++ b/docs/biblio/ccgo.bib
@@ -777,6 +777,16 @@
   isbn = {0-7695-2153-3}
 }
 
+@ARTICLE{AdamsBrezinaHuEtAl03,
+  author = {Adams, M.~F. and Brezina, M. and Hu, J. J. and Tuminaro, R. S.},
+  title = {Parallel multigrid smoothing: polynomial versus {G}auss-{S}eidel},
+  journal = {Journal on Computational Physics},
+  year = {2003},
+  volume = {188},
+  pages = {593-610},
+  number = {2}
+}
+
 @MISC{Adams94,
   author = {Adams, N. A.},
   title = {Numerical Study of Boundary Layer Interaction with shocks -- method
@@ -1650,6 +1660,17 @@
   note = {\url{http://science.energy.gov/~/media/ascr/pdf/program-documents/docs/Multifaceted_Mathematical_Approach_for_Complex_Systems.pdf}},
   owner = {ccgo},
   timestamp = {2012.05.23}
+}
+
+@ARTICLE{AlexanderianPetraStadlerEtAl13,
+  author = {Alen Alexanderian and Noemi Petra and Georg Stadler and Omar Ghattas},
+  title = {A-optimal design of experiments for infinite-dimensional {B}ayesian
+	linear inverse problems with regularized $\ell_0$-sparsification},
+  journal = {SIAM Journal on Scientific Computing (submitted)},
+  year = {2013},
+  note = {\url{http://arxiv.org/abs/1308.4084}},
+  owner = {ccgo},
+  timestamp = {2013.09.02}
 }
 
 @INPROCEEDINGS{Alexandrov98,
@@ -4324,6 +4345,19 @@
   timestamp = {2007.04.23}
 }
 
+@ARTICLE{AustinBrezinaJamrozEtAl12,
+  author = {Austin, Travis M and Brezina, Marian and Jamroz, Ben and Jhurani,
+	Chetan and Manteuffel, Thomas A and Ruge, John},
+  title = {Semi-automatic sparse preconditioners for high-order finite element
+	methods on non-uniform meshes},
+  journal = {Journal of Computational Physics},
+  year = {2012},
+  volume = {231},
+  pages = {4694--4708},
+  number = {14},
+  publisher = {Elsevier}
+}
+
 @BOOK{Avriel76,
   title = {Nonlinear Programming. Analysis and Methods},
   publisher = {Prentice Hall},
@@ -5430,6 +5464,20 @@
   year = {2012},
   pages = {261--279},
   publisher = {Springer}
+}
+
+@ARTICLE{BakerFalgoutKolevEtAl11,
+  author = {Baker, A. and Falgout, R. and Kolev, T. and Yang, U.},
+  title = {Multigrid Smoothers for Ultraparallel Computing},
+  journal = {SIAM Journal on Scientific Computing},
+  year = {2011},
+  volume = {33},
+  pages = {2864-2887},
+  number = {5},
+  doi = {10.1137/100798806},
+  eprint = {http://epubs.siam.org/doi/pdf/10.1137/100798806},
+  file = {BakerFalgoutKolevEtAl11.pdf:papers/BakerFalgoutKolevEtAl11.pdf:PDF},
+  url = {http://epubs.siam.org/doi/abs/10.1137/100798806}
 }
 
 @INPROCEEDINGS{Bal04,
@@ -12973,7 +13021,7 @@
 @ARTICLE{BorziSchulz09,
   author = {Borz{\i}, A. and Schulz, V.},
   title = {Multigrid methods for {PDE} optimization},
-  journal = {SIAM review},
+  journal = {SIAM Review},
   year = {2009},
   volume = {51},
   pages = {361--395},
@@ -15407,13 +15455,14 @@
   url = {http://epubs.siam.org/doi/abs/10.1137/110851419}
 }
 
-@MISC{Bui-ThanhGhattasMartinEtAl12,
+@ARTICLE{Bui-ThanhGhattasMartinEtAl13,
   author = {Tan Bui-Thanh and Omar Ghattas and James Martin and Georg Stadler},
   title = {A computational framework for infinite-dimensional {B}ayesian inverse
 	problems. {P}art {I}: {T}he linearized case, with applications to
 	global seismic inversion},
-  year = {2012},
-  note = {Submitted},
+  journal = {SIAM Journal on Scientific Computing (to appear)},
+  year = {2013},
+  note = {\url{http://arxiv.org/abs/1308.1313}},
   owner = {ccgo},
   timestamp = {2011.04.18}
 }
@@ -16291,6 +16340,19 @@
   comment = {Web page for the ForestClaw software},
   owner = {ccgo},
   timestamp = {2013.04.07}
+}
+
+@ELECTRONIC{BursteddeCalhounMandliEtAl13,
+  author = {Carsten Burstedde and Donna Calhoun and Kyle Mandli and Andy R. Terrel},
+  month = {August},
+  year = {2013},
+  title = {{ForestClaw}: Hybrid forest-of-octrees {AMR} for hyperbolic conservation
+	laws},
+  howpublished = {arXiv:1308.1472},
+  note = {Accepted for publication in Proceedings of ParCo '13},
+  url = {http://arxiv.org/abs/1308.1472},
+  owner = {ccgo},
+  timestamp = {2013.08.19}
 }
 
 @ARTICLE{BursteddeGhattas09,
@@ -17687,6 +17749,20 @@
   pages = {321--374},
   owner = {ccgo},
   timestamp = {2007.04.25}
+}
+
+@ARTICLE{CanutoGervasioQuarteroni10,
+  author = {Canuto, C. and Gervasio, P. and Quarteroni, A.},
+  title = {Finite-Element Preconditioning of G-NI Spectral Methods},
+  journal = {SIAM Journal on Scientific Computing},
+  year = {2010},
+  volume = {31},
+  pages = {4422-4451},
+  number = {6},
+  doi = {10.1137/090746367},
+  eprint = {http://epubs.siam.org/doi/pdf/10.1137/090746367},
+  file = {CanutoGervasioQuarteroni10.pdf:papers/CanutoGervasioQuarteroni10.pdf:PDF},
+  url = {http://epubs.siam.org/doi/abs/10.1137/090746367}
 }
 
 @BOOK{CanutoHussainiQuarteroniEtAl06,
@@ -19557,7 +19633,7 @@
 
 @ARTICLE{ChenAnitescuSaad11,
   author = {Chen, Jie and Anitescu, Mihai and Saad, Yousef},
-  title = {Computing $f(A)b$ via Least Squares Polynomial Approximations},
+  title = {Computing {$f(A)b$} via Least Squares Polynomial Approximations},
   journal = {SIAM Journal on Scientific Computing},
   year = {2011},
   volume = {33},
@@ -19720,7 +19796,7 @@
 @ARTICLE{ChenDonohoSaunders01,
   author = {Chen, S.S. and Donoho, D.L. and Saunders, M.A.},
   title = {{Atomic decomposition by basis pursuit}},
-  journal = {SIAM review},
+  journal = {SIAM Review},
   year = {2001},
   volume = {43},
   pages = {129--159},
@@ -21162,6 +21238,19 @@
   timestamp = {2011.02.17}
 }
 
+@ARTICLE{CockburnGopalakrishnanLazarov09a,
+  author = {B. Cockburn and J. Gopalakrishnan and R. Lazarov},
+  title = {Unified Hybridization of Discontinuous {G}alerkin, Mixed, and Continuous
+	{G}alerkin Methods for Second Order Elliptic Problems},
+  journal = {SIAM J. Numer. Anal.},
+  year = {2009},
+  volume = {47},
+  pages = {1319--1365},
+  number = {2},
+  owner = {ccgo},
+  timestamp = {2013.09.10}
+}
+
 @ARTICLE{CockburnHouShu90,
   author = {Bernardo Cockburn and Hou, S. and Chi-Wang Shu},
   title = {{TVD} {R}unge--{K}utta local projection discontinuous {G}alerkin
@@ -21187,19 +21276,6 @@
   timestamp = {2007.04.25}
 }
 
-@ARTICLE{CockburnKanschatSchotzau05,
-  author = {Cockburn, Bernardo and Kanschat, Guido and Sch{\"o}tzau, Dominik},
-  title = {A locally conservative {LDG} method for the incompressible {N}avier-{S}tokes
-	equations},
-  journal = {Mathematics of Computation},
-  year = {2005},
-  volume = {74},
-  pages = {1067--1095 (electronic)},
-  number = {251},
-  owner = {ccgo},
-  timestamp = {2007.03.15}
-}
-
 @ARTICLE{CockburnKanschatSchotzau05a,
   author = {Cockburn, Bernardo and Kanschat, Guido and Sch{\"o}tzau, Dominik},
   title = {The local discontinuous {G}alerkin method for linearized incompressible
@@ -21221,6 +21297,20 @@
   volume = {73},
   pages = {569--593 (electronic)},
   number = {246},
+  owner = {ccgo},
+  timestamp = {2007.03.15}
+}
+
+@ARTICLE{CockburnKanschatSchotzau04a,
+  author = {Cockburn, Bernardo and Kanschat, Guido and Sch{\"o}tzau, Dominik},
+  title = {A locally conservative {LDG} method for the incompressible {N}avier-{S}tokes
+	equations},
+  journal = {Mathematics of Computation},
+  year = {2004},
+  volume = {74},
+  pages = {1067-1095},
+  number = {251},
+  file = {CockburnKanschatSchotzau04a.pdf:CockburnKanschatSchotzau04a.pdf:PDF},
   owner = {ccgo},
   timestamp = {2007.03.15}
 }
@@ -24974,9 +25064,8 @@
   author = {De Los Reyes, Juan Carlos and Stadler, Georg},
   title = {A nonsmooth model for discontinuous shear thickening fluids: analysis
 	and numerical solution},
-  journal = {ESAIM: Mathematical Modelling and Numerical Analysis},
+  journal = {Interfaces and Free Boundaries (submitted)},
   year = {2013},
-  note = {Submitted},
   owner = {ccgo},
   timestamp = {2012.11.02}
 }
@@ -28034,6 +28123,20 @@
   local-url = {file://localhost/Users/webster/Documents/phd_research/papers_talks/SPDE_papers/du_zhang(2002).pdf},
   owner = {ccgo},
   timestamp = {2008.06.04}
+}
+
+@ARTICLE{DuSarkisSchaererEtAl13,
+  author = {Du, Xiuhong and Sarkis, Marcus and Schaerer, Christian E and Szyld,
+	Daniel B},
+  title = {Inexact and truncated Parareal-in-time {K}rylov subspace methods
+	for parabolic optimal control problems},
+  journal = {Electronic Transactions on Numerical Analysis},
+  year = {2013},
+  volume = {40},
+  pages = {36--57},
+  file = {DuSarkisSchaererEtAl13.pdf:DuSarkisSchaererEtAl13.pdf:PDF},
+  owner = {ccgo},
+  timestamp = {2013.10.01}
 }
 
 @INPROCEEDINGS{DuarteWakinBaronEtAl06,
@@ -33678,6 +33781,17 @@
   timestamp = {2007.04.25}
 }
 
+@ARTICLE{Franklin70,
+  author = {J. N. Franklin},
+  title = {Well-posed stochastic extensions of ill--posed linear problems},
+  journal = {Journal of Mathematical Analysis and Applications},
+  year = {1970},
+  volume = {31},
+  pages = {682--716},
+  owner = {ccgo},
+  timestamp = {2013.10.13}
+}
+
 @ARTICLE{Fraser-Andrews99,
   author = {Fraser-Andrews, G.},
   title = {A Multiple-Shooting Technique for Optimal Control},
@@ -36357,6 +36471,7 @@
   title = {Convergence of Linearized and Adjoint Approximations for Discontinuous
 	Solutions of Conservation Laws. Part 1: Linearized Approximations
 	and Linearized Output Functionals},
+  journal = {SIAM Journal on Numerical Analysis},
   year = {2010},
   volume = {48},
   pages = {882-904},
@@ -36376,6 +36491,7 @@
   title = {Convergence of Linearized and Adjoint Approximations for Discontinuous
 	Solutions of Conservation Laws. Part 2: Adjoint Approximations and
 	Extensions},
+  journal = {SIAM Journal on Numerical Analysis},
   year = {2010},
   volume = {48},
   pages = {905-921},
@@ -36490,6 +36606,20 @@
   author = {Girault, Vivette and Raviart, Pierre-Arnault},
   owner = {ccgo},
   timestamp = {2007.04.21}
+}
+
+@ARTICLE{GiraultRiviereWheeler04,
+  author = {Vivette Girault and B{\'e}atrice Rivi{\`e}re and Mary F. Wheeler},
+  title = {A discontinuous {G}alerkin method with nonoverlapping domain decomposition
+	for the {S}tokes and {Navier-Stokes} equations},
+  journal = {Mathematics of Computation},
+  year = {2004},
+  volume = {74},
+  pages = {53-84},
+  number = {249},
+  file = {GiraultRiviereWheeler04.pdf:GiraultRiviereWheeler04.pdf:PDF},
+  owner = {ccgo},
+  timestamp = {2013.10.16}
 }
 
 @ARTICLE{GirolamiCalderhead11,
@@ -37206,7 +37336,7 @@
   title = {Matrix Computations},
   publisher = {Johns Hopkins University Press},
   year = {1996},
-  author = {Golub, Gene H. and Van Loan, Charles F},
+  author = {Golub, Gene H. and Van Loan, Charles F.},
   series = {Johns Hopkins Studies in the Mathematical Sciences},
   address = {Baltimore, MD},
   edition = {Third},
@@ -41638,7 +41768,7 @@
   author = {Halko, Nathan and Martinsson, Per-Gunnar and Tropp, Joel A.},
   title = {Finding structure with randomness: Probabilistic algorithms for constructing
 	approximate matrix decompositions},
-  journal = {SIAM review},
+  journal = {SIAM Review},
   year = {2011},
   volume = {53},
   pages = {217--288},
@@ -43585,6 +43715,7 @@
   booktitle = {Proceedings of the 16th AIAA Computational Fluid Dynamics Conference.
 	AIAA Paper 2003-3989},
   year = {2003},
+  file = {HelenbrookMavriplisAtkins03.pdf:papers/HelenbrookMavriplisAtkins03.pdf:PDF},
   owner = {ccgo},
   timestamp = {2007.03.15}
 }
@@ -44055,6 +44186,15 @@
   url = {http://link.aip.org/link/?SJC/50/943/1}
 }
 
+@ARTICLE{HesseStadler13,
+  author = {Marc Hesse and Georg Stadler},
+  title = {Joint coupled inversion in quasistatic poroelasticity},
+  journal = {Journal of Geophysical Research (in revision)},
+  year = {2013},
+  owner = {ccgo},
+  timestamp = {2013.10.09}
+}
+
 @BOOK{Hestenes80,
   title = {Conjugate Direction Methods in Optimization},
   publisher = {Springer Verlag},
@@ -44340,6 +44480,21 @@
   author = {Heuveline, V. and Schieweck, F.}
 }
 
+@ARTICLE{HeysManteuffelMcCormickEtAl05,
+  author = {Heys, J. J. and Manteuffel, T. A. and McCormick, S. F. and Olson,
+	L. N.},
+  title = {Algebraic multigrid for higher-order finite elements},
+  journal = {Journal of Computational Physics},
+  year = {2005},
+  volume = {204},
+  pages = {520--532},
+  number = {2},
+  doi = {10.1016/j.jcp.2004.10.021},
+  fjournal = {Journal of Computational Physics},
+  issn = {0021-9991},
+  url = {http://dx.doi.org/10.1016/j.jcp.2004.10.021}
+}
+
 @ARTICLE{HeywoodRannacherTurek96,
   author = {Heywood, John G. and Rannacher, Rolf and Turek, Stefan},
   title = {Artificial boundaries and flux and pressure conditions for the incompressible
@@ -44351,6 +44506,18 @@
   number = {5},
   owner = {ccgo},
   timestamp = {2007.03.15}
+}
+
+@INPROCEEDINGS{HickenAlonso13,
+  author = {Hicken, Jason E and Alonso, Juan J},
+  title = {Comparison of reduced-and full-space algorithms for PDE-constrained
+	optimization},
+  booktitle = {51st AIAA Aerospace Sciences Meeting, no. AIAA--2013--1043, Grapevine,
+	Texas, United States},
+  year = {2013},
+  file = {HickenAlonso13.pdf:HickenAlonso13.pdf:PDF},
+  owner = {ccgo},
+  timestamp = {2013.10.01}
 }
 
 @INPROCEEDINGS{HicksHenne77,
@@ -46700,23 +46867,28 @@
   author = {Xun Huan and Youssef M. Marzouk},
   title = {Gradient-based stochastic optimization methods in {B}ayesian experimental
 	design},
-  note = {Submitted},
+  note = {\url{http://arxiv.org/abs/1212.2228}},
   file = {HuanMarzouk12.pdf:HuanMarzouk12.pdf:PDF},
   owner = {ccgo},
   timestamp = {2012.12.17}
 }
 
-@ARTICLE{HuanMarzouk12b,
-  author = {Huan, Xun and Marzouk, Youssef M.},
+@ARTICLE{HuanMarzouk13,
+  author = {Xun Huan and Youssef M. Marzouk},
   title = {Simulation-based optimal {B}ayesian experimental design for nonlinear
 	systems},
   journal = {Journal of Computational Physics},
-  year = {2012},
-  note = {Submitted},
+  year = {2013},
+  volume = {232},
+  pages = {288--317},
+  number = {1},
+  doi = {http://dx.doi.org/10.1016/j.jcp.2012.08.013},
   file = {HuanMarzouk12b.pdf:HuanMarzouk12b.pdf:PDF},
+  issn = {0021-9991},
   owner = {ccgo},
   publisher = {Elsevier},
-  timestamp = {2013.01.16}
+  timestamp = {2013.08.09},
+  url = {http://www.sciencedirect.com/science/article/pii/S0021999112004597}
 }
 
 @ARTICLE{HuangSunLiuEtAl04,
@@ -47874,8 +48046,7 @@
   issn = {0031-9201},
   keywords = {Mantle plume, inverse mantle convection},
   owner = {jdier},
-  timestamp = {2009.04.01},
-  url = {http://www.sciencedirect.com/science/article/B6V6S-4C7DDX0-5/2/1396a14831cd95e163c00833223104a0}
+  timestamp = {2009.04.01}
 }
 
 @ARTICLE{Ismail-ZadehKorotkiiSchubertEtAl07,
@@ -50022,6 +50193,17 @@
   publisher = {American Geophysical Union}
 }
 
+@ARTICLE{JouvetRappaz12,
+  author = {Jouvet, Guillaume and Rappaz, Jacques},
+  title = {Analysis and finite element approximation of a nonlinear stationary
+	Stokes problem arising in glaciology},
+  journal = {Advances in Numerical Analysis},
+  year = {2012},
+  volume = {2011},
+  owner = {ccgo},
+  timestamp = {2013.09.24}
+}
+
 @ARTICLE{JovicDriver95,
   author = {Jovic, S. and Driver, D.},
   title = {Reynolds number effect on the skin friction in separated flows behind
@@ -51219,14 +51401,16 @@
 }
 
 @ARTICLE{KellyGagoZienkiewiczEtAl83,
-  author = {Kelly, DW and Gago, D.S.R. and Zienkiewicz, OC and Babuska, I.},
+  author = {Kelly, D. W. and Gago, J. P. de S. R. and Zienkiewicz, O. C. and
+	Babuska, I.},
   title = {A posteriori error analysis and adaptive processes in the finite
-	element method: part I -- error analysis},
+	element method: {Part I} -- error analysis},
   journal = {International Journal for Numerical Methods in Engineering},
   year = {1983},
   volume = {19},
-  pages = {1593--1619},
+  pages = {1593-1619},
   number = {11},
+  file = {KellyGagoZienkiewiczEtAl83.pdf:KellyGagoZienkiewiczEtAl83.pdf:PDF},
   owner = {jworthen},
   publisher = {Wiley Online Library},
   timestamp = {2012.11.05}
@@ -55160,6 +55344,16 @@
   keywords = {discontinuous Galerkin, error estimates, hyperbolic problems}
 }
 
+@PHDTHESIS{Lasanen02,
+  author = {S. Lasanen},
+  title = {Discretizations of generalized random variables with applications
+	to inverse problems},
+  school = {University of Oulu},
+  year = {2002},
+  owner = {ccgo},
+  timestamp = {2013.10.13}
+}
+
 @BOOK{Lasdon70,
   title = {Optimization Theory for Large Systems},
   publisher = {Macmillan},
@@ -55396,13 +55590,25 @@
   timestamp = {2009.05.17}
 }
 
-@UNPUBLISHED{Law13,
+@UNPUBLISHED{Law13b,
   author = {Law, Kody J. H.},
   title = {Proposals which speed-up function space {MCMC}},
-  file = {Law2013.pdf:Law2013.pdf:PDF},
+  file = {Law13b.pdf:Law13b.pdf:PDF},
   owner = {ccgo},
   timestamp = {2013.07.24},
   url = {http://arxiv.org/abs/1212.4767}
+}
+
+@ARTICLE{Law13,
+  author = {Law, Kody J. H.},
+  title = {Proposals which speed up function-space {MCMC}},
+  journal = {Journal of Computational and Applied Mathematics},
+  year = {2013},
+  note = {In Press},
+  doi = {http://dx.doi.org/10.1016/j.cam.2013.07.026},
+  file = {Law13.pdf:Law13.pdf:PDF},
+  owner = {ccgo},
+  timestamp = {2013.08.27}
 }
 
 @ARTICLE{LawlorChakravortyWilmarthEtAl06,
@@ -55461,7 +55667,7 @@
   title = {Functional Analysis},
   publisher = {John Wiley \& Sons},
   year = {2002},
-  author = {Lax, P. D.},
+  author = {Lax, Peter D.},
   address = {New-York, Chicester, Brisbane, Toronto},
   owner = {ccgo},
   timestamp = {2007.03.15}
@@ -57232,6 +57438,18 @@
   year = {2009},
   owner = {ccgo},
   timestamp = {2009.01.07}
+}
+
+@ARTICLE{LiebermanWillcox12,
+  author = {Lieberman, Chad and Willcox, Karen},
+  title = {Goal-Oriented Inference: Approach, Linear Theory, and Application
+	to Advection Diffusion},
+  journal = {SIAM Journal on Scientific Computing},
+  year = {2012},
+  volume = {34},
+  pages = {A1880--A1904},
+  number = {4},
+  publisher = {SIAM}
 }
 
 @ARTICLE{LiebermanWillcoxGhattas10,
@@ -59935,6 +60153,28 @@
   pages = {717-744}
 }
 
+@INPROCEEDINGS{MadayMunoz89,
+  author = {Maday, Yvon and Mu{\~n}oz, Rafael},
+  title = {Numerical analysis of a multigrid method for spectral approximations},
+  booktitle = {11th International Conference on Numerical Methods in Fluid Dynamics},
+  year = {1989},
+  pages = {389--394},
+  organization = {Springer},
+  file = {MadayMunoz89.pdf:papers/MadayMunoz89.pdf:PDF}
+}
+
+@ARTICLE{MadayMunoz88,
+  author = {Maday, Yvon and Mu{\~n}oz, Rafael},
+  title = {Spectral element multigrid. {II}. {T}heoretical justification},
+  journal = {Journal of scientific computing},
+  year = {1988},
+  volume = {3},
+  pages = {323--353},
+  number = {4},
+  file = {MadayMunoz88.pdf:papers/MadayMunoz88.pdf:PDF},
+  publisher = {Springer}
+}
+
 @ARTICLE{MadayTurinici02,
   author = {Maday, Y. and Turinici, G.},
   title = {A parareal in time procedure for the control of partial differential
@@ -60912,6 +61152,18 @@
   pages = {361--376},
   owner = {ccgo},
   timestamp = {2007.04.25}
+}
+
+@ARTICLE{MartinMonnier13,
+  author = {Martin, N and Monnier, J},
+  title = {Of the gradient accuracy in Full-Stokes ice flow model: basal slipperiness
+	inference},
+  journal = {The Cryosphere Discussion},
+  year = {2013},
+  volume = {7},
+  pages = {3853-3897},
+  owner = {ccgo},
+  timestamp = {2013.09.09}
 }
 
 @ARTICLE{Martinez93,
@@ -65478,6 +65730,78 @@
   timestamp = {2011.10.06}
 }
 
+@ARTICLE{NguyenPeraire12,
+  author = {N. C. Nguyen and J. Peraire},
+  title = {Hybridizable discontinuous {G}alerkin methods for partial differential
+	equations in continuum mechanics},
+  journal = {Journal Computational Physics},
+  year = {2012},
+  volume = {231},
+  pages = {5955--5988},
+  owner = {ccgo},
+  timestamp = {2013.09.27}
+}
+
+@ARTICLE{NguyenPeraireCockburn11,
+  author = {N. C. Nguyen and J. Peraire and B. Cockburn},
+  title = {An implicit high-order hybridizable discontinuous {G}alerkin method
+	for the incompressible {N}avier-{S}tokes equations},
+  journal = {Journal Computational Physics},
+  year = {2011},
+  volume = {230},
+  pages = {1147--1170},
+  owner = {ccgo},
+  timestamp = {2013.09.27}
+}
+
+@ARTICLE{NguyenPeraireCockburn11a,
+  author = {N. C. Nguyen and J. Peraire and B. Cockburn},
+  title = {High-order implicit hybridizable discontinuous {G}alerkin method
+	for acoustics and elastodynamics},
+  journal = {Journal Computational Physics},
+  year = {2011},
+  volume = {230},
+  pages = {3695--3718},
+  owner = {ccgo},
+  timestamp = {2013.09.27}
+}
+
+@ARTICLE{NguyenPeraireCockburn11b,
+  author = {N. C. Nguyen and J. Peraire and B. Cockburn},
+  title = {Hybridizable discontinuous {G}alerkin method for the time harmonic
+	{M}axwell's equations},
+  journal = {Journal Computational Physics},
+  year = {2011},
+  volume = {230},
+  pages = {7151--7175},
+  owner = {ccgo},
+  timestamp = {2013.09.27}
+}
+
+@ARTICLE{NguyenPeraireCockburn09,
+  author = {N. C. Nguyen and J. Peraire and B. Cockburn},
+  title = {An implicit high-order hybridizable discontinuous {G}alerkin method
+	for nonlinear convection-diffusion equations},
+  journal = {Journal Computational Physics},
+  year = {2009},
+  volume = {228},
+  pages = {8841--8855},
+  owner = {ccgo},
+  timestamp = {2013.09.10}
+}
+
+@ARTICLE{NguyenPeraireCockburn09a,
+  author = {N. C. Nguyen and J. Peraire and B. Cockburn},
+  title = {An implicit high-order hybridizable discontinuous {G}alerkin method
+	for linear convection-diffusion equations},
+  journal = {Journal Computational Physics},
+  year = {2009},
+  volume = {228},
+  pages = {3232--3254},
+  owner = {ccgo},
+  timestamp = {2013.09.10}
+}
+
 @ARTICLE{NguyenRaymond01,
   author = {Nguyen, Phuong Anh and Raymond, Jean-Pierre},
   title = {Control problems for convection-diffusion equations with control
@@ -66356,6 +66680,19 @@
   timestamp = {2007.03.15}
 }
 
+@ARTICLE{OlearyHeartyThompsonEtAl13,
+  author = {Michael J. O'Leary and Paul J. Hearty and William G. Thompson and
+	Maureen E. Raymo and Jerry X. Mitrovica and Jody M. Webster},
+  title = {Ice sheet collapse following a prolonged period of stable sea level
+	during the last interglacial},
+  journal = {Nature Geoscience},
+  year = {2013},
+  file = {OlearyHeartyThompsonEtAl13.pdf:OlearyHeartyThompsonEtAl13.pdf:PDF},
+  owner = {ccgo},
+  publisher = {Nature Publishing Group},
+  timestamp = {2013.09.30}
+}
+
 @INCOLLECTION{OSheaApplicationsEngineering04,
   author = {{O'Shea}, B. W. and Bryan, G. and Bordner, J. and Norman, M. L. and
 	Abel, T. and Harkness, R. and Kritsuk, A.},
@@ -66971,6 +67308,19 @@
   url = {http://www.jstor.org/fcgi-bin/jstor/viewitem.fcg/00361399/di974716/97p0158c?PAGE=0}
 }
 
+@ARTICLE{OliverCunhaReynolds97,
+  author = {Oliver, Dean S. and Cunha, Luciane B. and Reynolds, Albert C.},
+  title = {{M}arkov chain {M}onte {C}arlo methods for conditioning a permeability
+	field to pressure data},
+  journal = {Mathematical Geology},
+  year = {1997},
+  volume = {29},
+  pages = {61--91},
+  number = {1},
+  file = {OliverCunhaReynolds97.pdf:papers/OliverCunhaReynolds97.pdf:PDF},
+  publisher = {Springer}
+}
+
 @INPROCEEDINGS{OliverHeReynolds96,
   author = {D. S. Oliver and H. He and A. C. Reynolds},
   title = {Conditioning permeability fields to pressure data},
@@ -67124,6 +67474,18 @@
   pages = {1969-2002},
   owner = {ccgo},
   timestamp = {2007.04.23}
+}
+
+@ARTICLE{Olson07,
+  author = {Olson, Luke},
+  title = {Algebraic multigrid preconditioning of high-order spectral elements
+	for elliptic problems on a simplicial mesh},
+  journal = {SIAM Journal on Scientific Computing},
+  year = {2007},
+  volume = {29},
+  pages = {2189--2209},
+  number = {5},
+  publisher = {SIAM}
 }
 
 @BOOK{OmatuSeinfeld89,
@@ -68242,6 +68604,17 @@
   timestamp = {2008.06.04}
 }
 
+@ARTICLE{ParkerFox12,
+  author = {Parker, Albert and Fox, Colin},
+  title = {Sampling Gaussian distributions in Krylov spaces with conjugate gradients},
+  journal = {SIAM Journal on Scientific Computing},
+  year = {2012},
+  volume = {34},
+  pages = {B312--B334},
+  number = {3},
+  publisher = {SIAM}
+}
+
 @BOOK{Parker03,
   title = {Fields, flows and waves},
   publisher = {Springer-Verlag London Ltd.},
@@ -69156,12 +69529,13 @@
 }
 
 @ARTICLE{PetraMartinStadlerEtAl13,
-  author = {N. Petra and J. Martin and G. Stadler and O. Ghattas},
+  author = {Noemi Petra and James Martin and Georg Stadler and Omar Ghattas},
   title = {A computational framework for infinite-dimensional {B}ayesian inverse
 	problems: {P}art {II}. {S}tochastic {N}ewton {MCMC} with application
 	to ice sheet inverse problems},
-  journal = {In preparation},
+  journal = {SIAM Journal on Scientific Computing (submitted)},
   year = {2013},
+  note = {\url{http://arxiv.org/abs/1308.6221}},
   owner = {ccgo},
   timestamp = {2012.05.20}
 }
@@ -69216,6 +69590,21 @@
   number = {4},
   owner = {ccgo},
   timestamp = {2007.03.15}
+}
+
+@ARTICLE{PetruninRogozhinaVaughanEtAl13,
+  author = {Petrunin, AG and Rogozhina, I and Vaughan, APM and Kukkonen, IT and
+	Kaban, MK and Koulakov, I and Thomas, M},
+  title = {Heat flux variations beneath central Greenland/'s ice due to anomalously
+	thin lithosphere},
+  journal = {Nature Geoscience},
+  year = {2013},
+  volume = {6},
+  pages = {746--750},
+  number = {9},
+  owner = {ccgo},
+  publisher = {Nature Publishing Group},
+  timestamp = {2013.09.06}
 }
 
 @ARTICLE{Petzold82,
@@ -70517,7 +70906,7 @@
   journal = {Journal of Glaciology},
   year = {2011},
   volume = {57},
-  pages = {315},
+  pages = {315--324},
   number = {202},
   file = {PralongGudmundsson11.pdf:PralongGudmundsson11.pdf:PDF}
 }
@@ -71047,6 +71436,15 @@
   number = {2},
   owner = {ccgo},
   timestamp = {2007.03.15}
+}
+
+@BOOK{Pazman86,
+  title = {Foundations of Optimum Experimental Design},
+  publisher = {D. Reidel Publishing Co.},
+  year = {1986},
+  author = {P{\'a}zman, Andrej},
+  owner = {ccgo},
+  timestamp = {2013.08.05}
 }
 
 @ARTICLE{P'azmanP'azman89,
@@ -74137,6 +74535,16 @@
   timestamp = {2010.04.27}
 }
 
+@MISC{Roosta-KhorasaniAscher13,
+  author = {Farbod Roosta-Khorasani and Uri Ascher},
+  title = {Improved bounds on sample size for implicit matrix trace estimators},
+  howpublished = {Preprint},
+  year = {2013},
+  file = {Roosta-KhorasaniAscher13.pdf:Roosta-KhorasaniAscher13.pdf:PDF},
+  owner = {ccgo},
+  timestamp = {2013.08.11}
+}
+
 @ARTICLE{RoquetSaramito03,
   author = {Roquet, N. and Saramito, P.},
   title = {An adaptive finite element method for {B}ingham fluid flows around
@@ -74913,6 +75321,20 @@
   timestamp = {2007.03.15}
 }
 
+@ARTICLE{Russo06,
+  author = {Russo, Alessandro},
+  title = {Streamline-upwind Petrov/Galerkin method (SUPG) vs residual-free
+	bubbles (RFB)},
+  journal = {Computer methods in applied mechanics and engineering},
+  year = {2006},
+  volume = {195},
+  pages = {1608--1620},
+  number = {13},
+  owner = {ccgo},
+  publisher = {Elsevier},
+  timestamp = {2013.08.06}
+}
+
 @ARTICLE{Russo93,
   author = {Russo, G.},
   title = {A Deterministic Vortex Method for the Navier Stokes Equations},
@@ -75056,6 +75478,18 @@
   number = {5},
   owner = {ccgo},
   timestamp = {2007.03.15}
+}
+
+@ARTICLE{RonquistPatera87,
+  author = {R{\o}nquist, Einar M and Patera, Anthony T},
+  title = {Spectral element multigrid. I. Formulation and numerical results},
+  journal = {Journal of Scientific Computing},
+  year = {1987},
+  volume = {2},
+  pages = {389--406},
+  number = {4},
+  file = {RonquistPatera87.pdf:papers/RonquistPatera87.pdf:PDF},
+  publisher = {Springer}
 }
 
 @ARTICLE{Suli88,
@@ -77742,6 +78176,20 @@
   month = {November},
   owner = {ccgo},
   timestamp = {2007.04.23}
+}
+
+@ARTICLE{ShahbaziFischerEthier07,
+  author = {Khosro Shahbazi and Paul F. Fischer and C. Ross Ethier},
+  title = {A high-order discontinuous {G}alerkin method for the unsteady incompressible
+	{Navier-Stokes} equations},
+  journal = {Journal of Computational Physics},
+  year = {2007},
+  volume = {222},
+  pages = {391-407},
+  doi = {10.1016/j.jcp.2006.07.029},
+  file = {ShahbaziFischerEthier07.pdf:ShahbaziFischerEthier07.pdf:PDF},
+  owner = {ccgo},
+  timestamp = {2013.10.16}
 }
 
 @PHDTHESIS{Shakib88,
@@ -84244,7 +84692,7 @@
   timestamp = {2007.03.15}
 }
 
-@ARTICLE{ToselliSchwab2003,
+@ARTICLE{ToselliSchwab03,
   author = {Toselli, A. and Schwab, C.},
   title = {Mixed hp-finite element approximations on geometric edge and boundary
 	layer meshes in three dimensions},
@@ -84943,6 +85391,18 @@
   year = {1999},
   owner = {ccgo},
   timestamp = {2007.04.25}
+}
+
+@ARTICLE{TuminaroWalkerShadid02,
+  author = {Raymond S. Tuminaro and Homer F. Walker and John N. Shadid},
+  title = {On backtracking failure in {N}ewton-{GMRES} methods with a demonstration
+	for the {N}avier-{S}tokes equations},
+  journal = {Journal Computational Physics},
+  year = {2002},
+  volume = {180},
+  pages = {549--558},
+  owner = {ccgo},
+  timestamp = {2013.09.27}
 }
 
 @ARTICLE{TungHuangHo95,
@@ -89344,10 +89804,11 @@
 }
 
 @ARTICLE{WorthenStadlerPetraEtAl13,
-  author = {Jennifer Worthen and Georg Stadler and Noemi Petra and Omar Ghattas
-	and Michael Gurnis},
-  title = {Towards an adjoint-based inversion of nonlinear viscous mante flow},
-  journal = {in preparation},
+  author = {Jennifer Worthen and Georg Stadler and Noemi Petra and Michael Gurnis
+	and Omar Ghattas},
+  title = {Towards adjoint-based inversion for rheological parameters in nonlinear
+	viscous mante flow},
+  journal = {Physics of the Earth and Planetary Interiors (submitted)},
   year = {2013},
   owner = {ccgo},
   timestamp = {2013.04.15}
