Don't number the introduction

--- a/docs/parco13/paper.tex
+++ b/docs/parco13/paper.tex
@@ -102,7 +102,7 @@ manycore
 
 %%%%%%%%%%% The article body starts:
 
-\section{Introduction}
+\section*{Introduction}
 
 With the advent of many-core chips such as GPUs and the MIC architecture
  comes the opportunity to sustain unprecedented rates of floating point
