(swirl, ini, ipynb) Update notebook, ini files

--- a/applications/advection/2d/swirl/swirl.ipynb
+++ b/applications/advection/2d/swirl/swirl.ipynb
@@ -4,20 +4,17 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Plot all frames"
+    "# Swirl\n",
+    "_____________\n",
+    "\n",
+    "Scalar advection problem with swirling velocity field."
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false,
-    "scrolled": true
-   },
-   "outputs": [],
+   "cell_type": "markdown",
+   "metadata": {},
    "source": [
-    "from clawpack.visclaw.plotclaw import plotclaw\n",
-    "from plot_swirl import setplot"
+    "Run code in **serial mode** (will work, even if code is compiled with MPI)"
    ]
   },
   {
@@ -28,14 +25,52 @@
    },
    "outputs": [],
    "source": [
-    "plotclaw(outdir='.',format='forestclaw',plotdir='_plots',setplot=setplot)"
+    "!swirl   "
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Create animation"
+    "Or, run code in **parallel mode** (may need to be customized)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "# !mpirun -n 4 swirl"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Create PNG files for web-browser viewing, or animation (below)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "%run plot_swirl.py"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "View files in browser, using URL above.  \n",
+    "\n",
+    "Or, you can animate the PNG files created above with the following code."
    ]
   },
   {
@@ -80,15 +115,6 @@
     "animation.FuncAnimation(fig, animate, init_func=init,\n",
     "                              frames=len(filenames), interval=500, blit=True)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
