Change amr_options_t to fclaw_options_t

--- a/applications/advection/2d/swirl/swirl.ipynb
+++ b/applications/advection/2d/swirl/swirl.ipynb
@@ -4,10 +4,20 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "## ForestClaw"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "# Swirl\n",
-    "_____________\n",
     "\n",
-    "Scalar advection problem with swirling velocity field."
+    "---\n",
+    "\n",
+    "Scalar advection problem with swirling velocity field.\n",
+    "\n",
+    "---"
    ]
   },
   {
@@ -21,7 +31,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": false
+    "collapsed": true
    },
    "outputs": [],
    "source": [
@@ -32,14 +42,15 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Or, run code in **parallel mode** (may need to be customized)"
+    "---\n",
+    "Or, run code in **parallel mode** (command may need to be customized, depending on MPI installation.)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": false
+    "collapsed": true
    },
    "outputs": [],
    "source": [
@@ -50,7 +61,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Create PNG files for web-browser viewing, or animation (below)"
+    "---\n",
+    "Create PNG files for web-browser viewing, or animation."
    ]
   },
   {
@@ -68,16 +80,16 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "View files in browser, using URL above.  \n",
-    "\n",
-    "Or, you can animate the PNG files created above with the following code."
+    "---\n",
+    "View PNG files in browser, using URL above, or create an animation of all PNG files, using code below. "
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "scrolled": false
    },
    "outputs": [],
    "source": [
@@ -114,6 +126,15 @@
     "\n",
     "animation.FuncAnimation(fig, animate, init_func=init,\n",
     "                              frames=len(filenames), interval=500, blit=True)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "collapsed": true
+   },
+   "source": [
+    "---"
    ]
   }
  ],
